--- a/css/styles.css
+++ b/css/styles.css
@@ -6095,7 +6095,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #f4623a !important;
+  background-color: #5F9EA0 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
