--- a/css/styles.css
+++ b/css/styles.css
@@ -2470,7 +2470,7 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #f4623a;
+  background-color: #3CB371;
   border-color: #f4623a;
 }
 .btn-primary:hover {
