--- a/css/styles.css
+++ b/css/styles.css
@@ -9796,7 +9796,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #f4623a !important;
+  color: #90EE90 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10006,7 +10006,7 @@ html {
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
-  border-color: #f4623a;
+  border-color: #E0FFFF;
 }
 
 hr.light {
