--- a/css/styles.css
+++ b/css/styles.css
@@ -9796,7 +9796,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #90EE90 !important;
+  color: #127436 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
