--- a/css/styles.css
+++ b/css/styles.css
@@ -6164,7 +6164,7 @@ button.bg-light:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #A6FFCC !important;
 }
 
 a.bg-dark:hover, a.bg-dark:focus,
