--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: 'Noto Sans TC', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Noto Sans TC', sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
