--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@
 }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -180,7 +180,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: 'Noto Sans TC', sans-serif;
   font-size: 1em;
 }
 
@@ -241,7 +241,7 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: inherit;
+  font-family: 'Noto Sans TC', sans-serif;
   font-size: inherit;
   line-height: inherit;
 }
@@ -357,9 +357,10 @@ template {
 }
 
 h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
+.h1, .h2, .h3, .h4, .h5, .h6
+{
+  font-family: 'Noto Sans TC', sans-serif;
   margin-bottom: 0.5rem;
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 500;
   line-height: 1.2;
 }
